# shape2d

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
examples/: interactive_gui.rs
shape2d/: Cargo.toml
shape2d-demo/: Cargo.toml  README.md  build-wasm.sh
shape2d-demo/assets/: index.html
shape2d-demo/src/: main.rs
shape2d-lib/src/: clip.rs  lib.rs  rtree.rs  triangulate.rs
shape2d/src/: clean.rs  clip.rs  lib.rs  offset.rs  sweep_line.rs  triangle_kernel.rs  triangulate.rs
shape2d/src/kernel/: line.rs  mod.rs  polyline.rs
src/: clean.rs  clip.rs  geometry.rs  hilbert.rs  lib.rs  rect.rs  rtree.rs  sweep_line.rs  triangle_kernel.rs  triangulate.rs  vertex.rs
src/kernel/: mod.rs  polyline.rs
