[package]
name = "shape2d-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
shape2d = { path = "../shape2d" }
eframe = "0.33"
egui_plot = "0.34"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
